fix: scrollbars showing

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,8 +1,4 @@
 .Home {
   height: 100%;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: space-between;
-  position: relative;
-  // padding: 2rem;
+  position: fixed;
 }
